Skip to content

GitLab

  • Projects
  • Groups
  • Snippets
  • Help
    • Loading...
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Sign in / Register
gst-python
gst-python
  • Project overview
    • Project overview
    • Details
    • Activity
    • Releases
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 26
    • Issues 26
    • List
    • Boards
    • Labels
    • Service Desk
    • Milestones
  • Merge Requests 1
    • Merge Requests 1
  • CI/CD
    • CI/CD
    • Pipelines
    • Jobs
    • Schedules
  • Operations
    • Operations
    • Incidents
    • Environments
  • Packages & Registries
    • Packages & Registries
    • Container Registry
  • Analytics
    • Analytics
    • CI/CD
    • Repository
    • Value Stream
  • Snippets
    • Snippets
  • Members
    • Members
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar
  • GStreamer
  • gst-pythongst-python
  • Issues
  • #27

Closed
Open
Created Nov 12, 2019 by Guillaume Desmottes@gdesmott🐐Developer

python plugins destroyed while in PLAYING

Trying to use identity_py as instructed in the example. The element is properly registered but crashes after a short while.

GST_DEBUG=python:4 gst-launch-1.0 fakesrc num-buffers=10 ! identity_py ! fakesink
0:00:00.343213703  1965      0x25acd80 ERROR                 python audioplot.py:28:<module>: audioplot requires numpy, numpy_ringbuffer and matplotlib
Traceback (most recent call last):
  File "/home/cassidy/dev/gst/master/gst-build/subprojects/gst-python/examples/plugins/python/audioplot.py", line 24, in <module>
    from numpy_ringbuffer import RingBuffer
ModuleNotFoundError: No module named 'numpy_ringbuffer'
Setting pipeline to PAUSED ...
Pipeline is PREROLLING ...
0:00:00.353267517  1965      0x27dd590 INFO                  python identity.py:38:do_transform_ip: timestamp(buffer):CLOCK_TIME_NONE
Pipeline is PREROLLED ...
Setting pipeline to PLAYING ...
New clock: GstSystemClock
0:00:00.353540658  1965      0x27dd590 INFO                  python identity.py:38:do_transform_ip: timestamp(buffer):0:00:00.000000000

(gst-launch-1.0:1965): GStreamer-CRITICAL **: 12:01:50.494: 
Trying to dispose element identity+identity0, but it is in PLAYING instead of the NULL state.
You need to explicitly set elements to the NULL state before
dropping the final reference, to allow them to clean up.
This problem may also be caused by a refcounting bug in the
application or some element.

sys:1: Warning: g_object_ref: assertion 'G_IS_OBJECT (object)' failed
Caught SIGSEGV

Here is the trace of the first critical:

#0  0x00007ffff7d6b095 in _g_log_abort () at /lib64/libglib-2.0.so.0
#1  0x00007ffff7d6c366 in g_logv () at /lib64/libglib-2.0.so.0
#2  0x00007ffff7d6c533 in g_log () at /lib64/libglib-2.0.so.0
#3  0x00007ffff7cd1c68 in g_object_unref () at /lib64/libgobject-2.0.so.0
#4  0x00007ffff7f08440 in gst_pad_chain_data_unchecked (pad=pad@entry=0x6823a0, type=type@entry=4112, data=data@entry=0xdfa6c0) at ../subprojects/gstreamer/gst/gstpad.c:4421
#5  0x00007ffff7f0a5b1 in gst_pad_push_data (pad=pad@entry=0x682150, type=type@entry=4112, data=data@entry=0xdfa6c0) at ../subprojects/gstreamer/gst/gstpad.c:4655
#6  0x00007ffff7f11463 in gst_pad_push (pad=pad@entry=0x682150, buffer=0xdfa6c0) at ../subprojects/gstreamer/gst/gstpad.c:4774
#7  0x00007ffff0c93e9d in gst_base_src_loop (pad=0x682150) at ../subprojects/gstreamer/libs/gst/base/gstbasesrc.c:2974
#8  0x00007ffff7f3eaff in gst_task_func (task=0xdfa050) at ../subprojects/gstreamer/gst/gsttask.c:328
#9  0x00007ffff7d8eef4 in g_thread_pool_thread_proxy () at /lib64/libglib-2.0.so.0
#10 0x00007ffff7d8e4c2 in g_thread_proxy () at /lib64/libglib-2.0.so.0
#11 0x00007ffff7ca04c0 in start_thread () at /lib64/libpthread.so.0
#12 0x00007ffff7bce553 in clone () at /lib64/libc.so.6
Edited Nov 18, 2019 by Guillaume Desmottes
Assignee
Assign to
None
Milestone
None
Assign milestone
Time tracking
None
Due date
None