gst/gstelementfactory.c
@@ -386,11 +386,10 @@ gst_element_factory_create (GstElementFactory * factory, const gchar * name)
     /* This ref will never be dropped as the class is never destroyed */
     GST_OBJECT_FLAG_SET (factory, GST_OBJECT_FLAG_MAY_BE_LEAKED);
 
-  /* Ensure that the reference is floating. Bindings might have a hard time
-   * making sure that the reference is indeed still floating after returning
-   * here */
-  if (element)
-    g_object_force_floating ((GObject *) element);
+  /* The reference we receive here should be floating, but we can't force
+   * it at our level. Simply assert to make the issue obvious to bindings
+   * developers */
+  g_assert (g_object_is_floating ((GObject *) element));
 
   GST_DEBUG ("created element \"%s\"", GST_OBJECT_NAME (factory));
 
